--- a/project.config
+++ b/project.config
@@ -1,4 +1,9 @@
-[access]
-	inheritFrom = All-Projects
+[access "refs/*"]
+        owner = group android_device_xiaomi_pissarro
+        label-Verified = -1..+1 group android_device_xiaomi_pissarro
+        submit = group android_device_xiaomi_pissarro
+[receive]
+        requireChangeId = true
 [submit]
-	action = inherit
+        mergeContent = true
+        action = merge always
