--- a/recovery/root/init.recovery.mt6877.rc
+++ b/recovery/root/init.recovery.mt6877.rc
@@ -29,6 +29,9 @@ on post-fs
 on init
     export PATH /sbin:/system/bin:/vendor/bin:/vendor/bin/hw
     export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw
+    symlink /dev/block/by-name/boot /dev/block/bootdevice/by-name/boot
+    symlink /dev/block/by-name/boot_a /dev/block/bootdevice/by-name/boot_a
+    symlink /dev/block/by-name/boot_b /dev/block/bootdevice/by-name/boot_b
 
 on fs
     install_keyring
