--- a/recovery/root/init.recovery.mt6877.rc
+++ b/recovery/root/init.recovery.mt6877.rc
@@ -25,13 +25,12 @@ on post-fs
 
     # Start Boot HAL
     start boot-hal-1-2
+    
+    /system/bin/runatboot.sh
 
 on init
     export PATH /sbin:/system/bin:/vendor/bin:/vendor/bin/hw
     export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw
-    # Create a more standard /dev/block layout for our scripts
-    symlink /dev/block/platform/bootdevice /dev/block/bootdevice
-
 
 on fs
     install_keyring
